description preview fix

--- a/content/projects/8 Puzzle Solver.html
+++ b/content/projects/8 Puzzle Solver.html
@@ -2,20 +2,11 @@
 Title: 8 Puzzle Solver
 Description: A simple 8 puzzle solver. (With your choice of heuristic function and search algorithm!)
 ---
+<p id="Post preview text hack the frontmatter isn't working as I had expeced." class="invisible">A simple 8 puzzle solver. (With your choice of heuristic function and search algorithm!) | I first wrote a 8 puzzle solver some years in my university Artifical Intellegence class. 
+  That version was a terminal program written in Python.</p>
 
 <link rel="stylesheet" href="../8puzzleCode/8puzzle.css" />
 
-<h2>About</h2>
-<p>
-  I first wrote a 8 puzzle solver some years in my university Artifical Intellegence class. 
-  That version was a terminal program written in Python. The purpose of that project was learning about 
-  – and then characterizing the performance of – different search algorithms and heuristic functions.
-  Feel free to <a href="https://github.com/joelpeckham/8puzzle">get the code on Github.</a>
-</p>
-<p>Below is a web port of my python project. Enjoy solving puzzles and 
-  exploring the performance characteristics of different search algorithms!
- </p>
-<h2>Solver</h2>
 <div id="solver-app">
   <div id="controls">
     <div class="controlItem">
@@ -119,8 +110,19 @@ Description: A simple 8 puzzle solver. (With your choice of heuristic function a
 <script>
   randomizePuzzleString();
 </script>
+<h2>About</h2>
+<p>
+  I first wrote a 8 puzzle solver some years in my university Artifical Intellegence class. 
+  That version was a terminal program written in Python. The purpose of that project was learning about 
+  – and then characterizing the performance of – different search algorithms and heuristic functions.
+  Feel free to <a href="https://github.com/joelpeckham/8puzzle">get the code on Github.</a>
+</p>
+<p>Above is a web port of my python project. Enjoy solving puzzles and 
+  exploring the performance characteristics of different search algorithms!
+  If you're interested in the details of the algorithms, keep reading.
+ </p>
 <h2>
-  More about the search algorithms
+  Search algorithms
 </h2>
 <p>
   The search algorithms used in this project are:
@@ -212,7 +214,7 @@ Description: A simple 8 puzzle solver. (With your choice of heuristic function a
 </details>
 <p></p>
 <h2>
-  More about the heuristic functions
+  Heuristic functions
 </h2>
 <p>
   The heuristic functions used in this project are:
