--- a/content/projects/neural net visualizer.html
+++ b/content/projects/neural net visualizer.html
@@ -30,7 +30,7 @@ Description: An interactive tool to visualize the training of neural networks.
         name="hiddenNodes"
         min="1"
         max="25"
-        value="4"
+        value="6"
       /> </label
     ><label for="stepSize"
       >Step Size:
@@ -160,6 +160,8 @@ Description: An interactive tool to visualize the training of neural networks.
         </div>
       </div>
       <div class="gaCol col_2">
+        <div class="node hiddenNode"></div>
+        <div class="node hiddenNode"></div>
         <div class="node hiddenNode"></div>
         <div class="node hiddenNode"></div>
         <div class="node hiddenNode"></div>
