--- a/content/projects/neural net visualizer.html
+++ b/content/projects/neural net visualizer.html
@@ -132,7 +132,7 @@ Description: An interactive tool to visualize the training of neural networks.
     </div>
     <div id="graphArea">
       <div class="col1Wrapper">
-        <div class="gaCol col_1">
+        <div class="gaCol col_1 grid">
           <div class="node inputNode"></div>
           <div class="node inputNode"></div>
           <div class="node inputNode"></div>
